added button function and styling, timer text to window

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <body>
     <header>
       <nav id="view-high-scores">View High Scores</nav>
-      <h4 id="timer">Time:</h4>
-      <!-- This is where the 'View High Scores' link on the left and the timer on the right will go. -->
+      <h4 id="timer"></h4>
     </header>
     <main>
       <section id="start-point">
@@ -22,9 +21,7 @@
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
-        <button id="start-button" type="button start" class="row">
-          Start Quiz
-        </button>
+        <button id="start" class="button row">Start Quiz</button>
       </section>
       <section id="quiz-template">
         <h2 id="quiz-question-text">quiz question text</h2>
@@ -57,9 +54,8 @@
           <button type="button" id="clear-scores">Clear Scores</button>
         </div>
       </section>
-      <!-- This is where the quiz code will be executed -->
     </main>
     <footer></footer>
-    <script scr="/assets/script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
