--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav id="view-high-scores">View High Scores</nav>
-      <h4 id="timer"></h4>
+      <h4 id="timer">Time: 75</h4>
     </header>
     <main>
       <section id="start-point">
