--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Quiz</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav id="view-high-scores">View High Scores</nav>
       <h4 id="timer">Time: 75</h4>
     </header>
@@ -34,9 +34,6 @@
           <button type="button" id="selection-box-4">placeholder text</button>
         </div>
       </section>
-      <span class="correct-wrong">
-        <h3 id="correct-wrong">placeholder text</h3>
-      </span>
       <section id="all-done">
         <h1>All done!</h1>
         <p id="all-done-text">Your final score is</p>
@@ -55,7 +52,11 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <span class="correct-wrong">
+        <h3 id="correct-wrong">word</h3>
+      </span>
+    </footer>
     <script src="./assets/script.js"></script>
   </body>
 </html>
